crates/cairn-core/tests/snapshots/envelope_errors__snapshot_body@fallthrough_invalid_identity.snap
---
source: crates/cairn-core/tests/envelope_errors.rs
expression: body
---
{
  "code": "InvalidArgs",
  "message": "identity: bad prefix",
  "data": {
    "field": "envelope",
    "reason": "identity: bad prefix"
  }
}
