crates/cairn-core/tests/snapshots/envelope_errors__snapshot_body@invalid_signature.snap
---
source: crates/cairn-core/tests/envelope_errors.rs
expression: body
---
{
  "code": "MissingSignature",
  "message": "signature: cryptographic verification failed"
}
