crates/cairn-core/tests/snapshots/envelope_errors__snapshot_body@key_version_mismatch.snap
---
source: crates/cairn-core/tests/envelope_errors.rs
expression: body
---
{
  "code": "RevokedKey",
  "message": "key version mismatch for hmn:tafeng: intent=1, registry has None",
  "data": {
    "issuer": "hmn:tafeng",
    "key_version": 1
  }
}
