crates/cairn-core/tests/snapshots/envelope_errors__snapshot_body@scope_denied.snap
---
source: crates/cairn-core/tests/envelope_errors.rs
expression: body
---
{
  "code": "Unauthorized",
  "message": "scope denied: tenant: expected acme, got other",
  "data": {
    "required": "tenant: expected acme, got other"
  }
}
