crates/cairn-core/tests/snapshots/envelope_errors__snapshot_body@unauthorized.snap
---
source: crates/cairn-core/tests/envelope_errors.rs
expression: body
---
{
  "code": "Unauthorized",
  "message": "unauthorized: issuer mismatch",
  "data": {
    "required": "issuer mismatch"
  }
}
